# amphora

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
content/img/: attribution.txt  sprites.asht  sprites.chr
content/maps/: grassland.tmj  overworld.tmj  overworld.tmx
content/music/: attribution.txt
content/sfx/: attribution.txt
docs/: HelpTOC.json  Map.jhm  amphora.html  api-reference.html  config.json  configuring-a-project.html  drawing-a-tilemap.html  drawing-sprites.html  drawing-text.html  getting-input.html  getting-started.html  index.html  particles-and-emitters.html  playing-sounds.html  saving-loading-data.html  sprite-fx.html  working-with-binary-resources.html  working-with-scenes.html
include/: colors.h  config.h  gameplay.h  palette.h  resources.h  save_data.h  scene_list.h  scenes_list.h  screen.h  sprites.h
include/FX/: motion_blur.h  snowfall.h
include/engine/: amphora.h  collision.h  db.h  error.h  events.h  game_loop.h  globals.h  img.h  input.h  memory.h  mixer.h  palette.h  particles.h  random.h  render.h  save_data.h  scenes.h  session_data.h  sprites.h  tilemap.h  ttf.h  typewriter.h  util.h
include/engine/internal/: collision.h  db.h  error.h  events.h  hash_table.h  ht_hash.h  img.h  input.h  lib.h  memory.h  mixer.h  particles.h  prefs.h  random.h  render.h  save_data.h  scenes.h  session_data.h  tilemap.h  timer.h  tools.h  ttf.h  typewriter.h
src/: CMakeLists.txt  EngineGlue.c  game_loop.c  game_loop.cpp  gameplay.c  main.c  sprites.c
src/Entities/: Player.cpp  Player.h
src/FX/: motion_blur.c  snowfall.c  snowfall.h
src/Scenes/: Level1.cpp  Level2.c  SceneList.c
src/Utils/: HealthBar.hpp
src/engine/: CMakeLists.txt  amphora.c  bin_loader.S  bin_loader.S.m4  bin_loader.rc  bin_loader.s  collision.c  config.c  db.c  error.c  events.c  hash_table.c  ht_hash.c  img.c  input.c  lib.c  main.c  memory.c  mixer.c  particles.c  prefs.c  random.c  render.c  save_data.c  scenes.c  session_data.c  sprites.c  spritesheet.rc  tilemap.c  tools.c  ttf.c  typewriter.c
